# cspeedtest

./: .gitignore  LICENSE.md  Makefile  Makefile.am  Makefile.linux  Makefile.osx  README  README.md  SECURITY.md  TODO  autogen  autogen.sh  configure.ac  cspeedtest.c  cursbench.c  curslib.c  curslib.h  curstest.c  disk_screen.h  makeclean  makeclean.sh  makeconf.sh  random_screen.c  random_screen.h  snapcraft.yaml  sphere_screen.c  swirl_screen.c  swirl_screen.h  timecurses.c  timecurses.h
.github/workflows/: c-cpp.yml  codeql-analysis.yml
man/: cspeedtest-int.1  cspeedtest-int.1.md  cspeedtest.1  cspeedtest.1.md
snap/: snapcraft.yaml
src/: Makefile.am  cspeedtest.c  curslib.c  curslib.h  disk_screen.c  helptest.sh  random_screen.c  sphere_screen.c  swirl_screen.c  timecurses.c  timecurses.h  verstest.sh
test/: helptest.sh  linktest.sh  testtest.sh  verstest.sh
